--- a/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/CommonApp.mxml
+++ b/org.openwms/trunk/source/org.openwms.common.flex.module/src/main/flex/org/openwms/web/flex/client/common/view/CommonApp.mxml
@@ -26,9 +26,13 @@
     
     <mx:Script>
     	<![CDATA[
+    		import org.openwms.web.flex.client.util.DisplayUtility;
     		import org.openwms.web.flex.client.event.SwitchScreenEvent;
     		import org.openwms.web.flex.client.common.event.CommonSwitchScreenEvent;
     		import org.openwms.web.flex.client.model.ModelLocator;
+    		
+            [Bindable]
+            protected var modelLocator : ModelLocator = ModelLocator.getInstance();
     	]]>
     </mx:Script>
 
@@ -36,19 +40,18 @@
         <mx:Canvas width="100%" height="25"  backgroundSize="100%">
             <mx:MenuBar id="commonMenuBar" labelField="@label">
                 <mx:XMLList>
-                    <menuitem label="Stock Configuration" targetPos="2">
+                    <menuitem label="Configuration" targetPos="1">
                         <menuitem label="Transport Unit Types" action="{CommonSwitchScreenEvent.SHOW_TRANSPORTUNITTYPE_VIEW}" />
                         <menuitem label="Transport Units" action="{CommonSwitchScreenEvent.SHOW_TRANSPORTUNIT_VIEW}" />
                         <menuitem label="Location Types" action="{CommonSwitchScreenEvent.SHOW_LOCATIONTYPE_VIEW}" />
                         <menuitem label="Locations" action="{SwitchScreenEvent.SHOW_LOCATION_VIEW}" />
                         <menuitem label="Location Groups" action="{SwitchScreenEvent.SHOW_LOCATIONGROUP_VIEW}" />
-                        <menuitem label="Users" action="{SwitchScreenEvent.SHOW_USER_MGMT_VIEW}" />
                     </menuitem>
                 </mx:XMLList>
             </mx:MenuBar>
         </mx:Canvas>
         <mx:HBox width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
-            <mx:ViewStack id="commonViewStack" selectedIndex="{ModelLocator.getInstance().mainViewStackIndex}">
+            <mx:ViewStack id="commonViewStack" selectedIndex="{ModelLocator.authenticated ? DisplayUtility.getView(modelLocator.actualView, commonViewStack) : DisplayUtility.getView(SwitchScreenEvent.SHOW_STARTSCREEN, commonViewStack)}">
                 <view:LocationView name="locationView" />
                 <view:LocationTypeView name="locationTypeView" />
                 <view:LocationGroupView name="locationGroupView" />
