--- a/org.openwms/trunk/source/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/TMSApp.mxml
+++ b/org.openwms/trunk/source/org.openwms.tms.flex.module/src/main/flex/org/openwms/web/flex/client/tms/view/TMSApp.mxml
@@ -26,7 +26,11 @@
 	
 	<mx:Script>
 		<![CDATA[
+			import org.openwms.web.flex.client.event.SwitchScreenEvent;
+			import org.openwms.web.flex.client.model.ModelLocator;
+			import org.openwms.web.flex.client.util.DisplayUtility;
 			import org.openwms.web.flex.client.tms.event.TMSSwitchScreenEvent;
+
 		]]>
 	</mx:Script>
 
@@ -34,14 +38,14 @@
 		<mx:Canvas width="100%" height="25" backgroundSize="100%">
 			<mx:MenuBar id="tmsMenuBar" labelField="@label">
 				<mx:XMLList>
-					<menuitem label="Transport Order Management" targetPos="3">
+					<menuitem label="Transport Order Management" targetPos="2">
 						<menuitem label="Transport Orders" enabled="true" action="{TMSSwitchScreenEvent.SHOW_TRANSPORT_ORDERS_VIEW}"/>
 					</menuitem>
 				</mx:XMLList>
 			</mx:MenuBar>
 		</mx:Canvas>
 		<mx:HBox width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
-			<mx:ViewStack id="tmsViewStack" selectedIndex="{modelLocator.mainViewStackIndex}">
+			<mx:ViewStack id="tmsViewStack" selectedIndex="{ModelLocator.authenticated ? DisplayUtility.getView(modelLocator.actualView, tmsViewStack) : DisplayUtility.getView(SwitchScreenEvent.SHOW_STARTSCREEN, tmsViewStack)}">
 				<view:TransportOrderView name="tmsTransportOrdersView" />
 			</mx:ViewStack>
 		</mx:HBox>
