First try to replace Adobe cairngorm with GraniteDS Tide client framework
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@865 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/business/Services.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/business/Services.mxml
@@ -49,7 +49,7 @@
 
     <granite:SecureRemoteObject
         id="moduleManagementService"
-        destination="moduleManagementService"
+        destination="moduleManagementService2"
         showBusyCursor="true"/>
 
     <granite:SecureRemoteObject
