--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/App.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/App.mxml
@@ -22,8 +22,13 @@
  */
 -->
 <view:AppBase xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:business="org.openwms.web.flex.client.business.*"
-	xmlns:control="org.openwms.web.flex.client.control.*" xmlns:event="org.openwms.web.flex.client.event.*" xmlns:view="org.openwms.web.flex.client.view.*" layout="absolute"
-	backgroundGradientAlphas="[1.0, 1.0]" backgroundGradientColors="[#FFFFFF, #FFFFFF]" creationComplete="init()" preinitialize="preInit(event)">
+	xmlns:control="org.openwms.web.flex.client.control.*" xmlns:event="org.openwms.web.flex.client.event.*"
+	xmlns:view="org.openwms.web.flex.client.view.*" layout="absolute" backgroundGradientAlphas="[1.0, 1.0]"
+	backgroundGradientColors="[#FFFFFF, #FFFFFF]" creationComplete="init()" preinitialize="preInit(event)">
+
+    <mx:Metadata>
+        [Name("application")]
+    </mx:Metadata>
 
     <mx:Script>
     	<![CDATA[
@@ -42,17 +47,18 @@
 	<!-- Services -->
 	<business:Services />
 
+                <mx:XMLList id="stdMenu">
+                    <menuitem label="Application">
+                        <menuitem label="Users" action="{SwitchScreenEvent.SHOW_USER_MGMT_VIEW}" />
+                        <menuitem label="Roles" action="{SwitchScreenEvent.SHOW_ROLE_MGMT_VIEW}" />
+                        <menuitem label="Modules" action="{SwitchScreenEvent.SHOW_MODULE_MGMT_VIEW}" />
+                    </menuitem>
+                </mx:XMLList>
+
 	<mx:VBox height="100%" width="100%" verticalGap="0" backgroundColor="#C2DAEF">
         <view:HeaderComponent />
    		<mx:Canvas width="100%" height="25" backgroundImage="@Embed(source='assets/images/breadcrumbs.jpg')" backgroundSize="100%">
 			<mx:MenuBar id="mainMenuBar" labelField="@label" itemClick="onMenuChange(event);" color="#00286e" fontWeight="bold" fontSize="12" alpha="0.0">
-            <mx:XMLList xmlns="">
-                <menuitem label="Application">
-                    <menuitem label="Users" action="{SwitchScreenEvent.SHOW_USER_MGMT_VIEW}" />
-                    <menuitem label="Roles" action="{SwitchScreenEvent.SHOW_ROLE_MGMT_VIEW}" />
-                    <menuitem label="Modules" action="{SwitchScreenEvent.SHOW_MODULE_MGMT_VIEW}" />
-                </menuitem>
-            </mx:XMLList>
 			</mx:MenuBar>
 		</mx:Canvas>
 		<mx:HBox width="100%" height="100%" horizontalAlign="center" verticalAlign="middle">
